# ChangeLog for dev-libs/fftw
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/fftw/ChangeLog,v 1.13 2003/12/31 19:00:32 george Exp $

  31 Dec 2003; George Shapovalov <george@gentoo.org> fftw-3.0.1.ebuild :
  marked stable.
  Note, stuff that needs MPI should DEPEND on 2.15 still! (but this is a task of 
  dependatnt packages)

*fftw-3.0.1 (23 Aug 2003)

  23 Aug 2003; George Shapovalov <george@gentoo.org> fftw-3.0.1.ebuild, metadata.xml :
  new version (#20048)
  thanks to Ingo Luetkebohle gentoo@blank.pages.de and  Sam Yates <sam@quux.dropbear.id.au>
  for ebuild submissions
  added metadata.xml (herd sci)

  22 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> fftw-2.1.5.ebuild :
  Changed flag altering.

  07 May 2003; George Shapovalov <george@gentoo.org> fftw-2.1.5.ebuild :
  apparently fftw doesn't like -fpmath=sse on pentium-4 M based systems (#19523)
  added corresponding filter, thanks to Christian Birchinger <joker@gentoo.org> for report.

*fftw-2.1.5 (23 Mar 2003)

  23 Mar 2003; George Shapovalov <george@gentoo.org> fftw-2.1.5.ebuild :
  updated to latest stable

*fftw-2.1.3-r1.ebuild (13 Feb 2003)

  13 Feb 2003; Nick Hadaway <raker@gentoo.org> fftw-2.1.3-r1.ebuild,
  files/digest-fftw-2.1.3 :
  New ebuild which creates links to the standard fftw include/lib names.
  If you specify SINGLE=yes on the emerge commandline the links will
  be created to the single precision libs/includes, otherwise by default
  to the double precision libs/includes.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*fftw-2.1.3.ebuild (20 June 2002)

  10 Feb 2003; Peter Johanson <latexer@gentoo.org> fftw-2.1.3.ebuild :
  Added ~alpha to KEYWORDS.

  19 Sep 2002; Owen Stampflee <owen@gentoo.org> :
  Added PPC to KEYWORDS.

  20 June 2002; George Shapovalov <george@gentoo.org> fftw-2.1.3.ebuild :

  updated ebuild to fix the top info file 